# declarative-mocks

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  REFERENCE.md  SPEC.md  pyproject.toml  pyrightconfig.json
src/dmock/: __init__.py  _exceptions.py  _expectation.py  _matchers.py  _mock.py  _types.py
tests/: test_expectation.py  test_matchers.py  test_mock.py  test_smoke.py
