[project]
name = "declarative-mocks"
version = "0.1.0"
description = ""
authors = [{ name = "Dimitry Churilov", email = "nationmdxr@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
packages = [{ include = "declarative_mocks", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src/declarative_mocks"]
include = ["*.py", "*.pyi"]
exclude = ["build", "dist", ".venv", ".git", "__pycache__"]
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "C",
    "D",
    "N",
    "UP",
    "C90",
    "PL",
    "PT",
    "RUF",
    "SLF001",
]
ignore = [
    "RUF001",
    "D203",
    "D213",
    "E501",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["declarative_mocks"]
lines-after-imports = 2

[tool.mypy]
mypy_path = "src"
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]
