[project]
name = "declarative-mocks"
version = "0.1.0"
description = ""
authors = [{ name = "Dimitry Churilov", email = "nationmdxr@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
packages = [{ include = "dmock", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src/dmock"]
include = ["*.py", "*.pyi"]
exclude = ["build", "dist", ".venv", ".git", "__pycache__", "examples"]
fix = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "D",
    "N",
    "UP",
    "C90",
    "PL",
    "PT",
    "RUF",
    "SLF",
    "SIM",
    "TC",
    "A",
    "T20",
    "PERF",
    "PIE",
    "FLY",
]
ignore = [
    "RUF001",
    "D203",
    "D213",
    "E501",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["dmock"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
python_version = "3.11"
strict = true
disallow_any_unimported = true
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config"

[tool.coverage.run]
source = ["dmock"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
